--- a/angular/package.json
+++ b/angular/package.json
@@ -4,17 +4,16 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node ./rest-api-server/server.js",
     "build": "ng build",
+    "start": "ng serve",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
-    "@angular/cli": "1.3.1",
+    "@angular/cli": "^1.3.1",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
@@ -24,11 +23,12 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "express": "4.15.4",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.2.4",
+    "@angular/compiler-cli": "^4.3.6",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
